bug(background-clipping): adjust styling to prevent clipping

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -111,7 +111,7 @@ code {
 		background-position: 0% 25%;
 	}
 	50% {
-		background-position: 100% 80%;
+		background-position: 100% 50%;
 	}
 	100% {
 		background-position: 0% 25%;
